<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/rules"
        android:textSize="@dimen/senegal_checkers_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_text_part1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/game_field_description"
                android:src="@drawable/game_field" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rules_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
